--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 remote_theme: pages-themes/hacker@v0.2.0
+title: "𝟷𝟽 𝚢𝚎𝚊𝚛𝚜 𝚘𝚏 𝚝𝚑𝚒𝚗𝚔𝚒𝚗𝚐"
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
